Fix inner-shadow appearing on Safari mobile (#167)
* fix inner-shadow appearing on Safari mobile
* update snapshots after recent changes by @dprzybylek

--- a/packages/design-system/src/components/InputField/style.scss
+++ b/packages/design-system/src/components/InputField/style.scss
@@ -10,7 +10,8 @@
   box-sizing: border-box;
   transition: border 0.25s ease-in-out;
   will-change: border-color;
-
+  background-clip: padding-box;
+ 
   &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: $font-primary-color;
     opacity: 0.4; /* Firefox */
